# IGS_CORS_Guidelines

./: .gitlab-ci.yml  404.html  AUTHORS.md  CHANGELOG.md  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cn/: 404.html  index.html  sitemap.xml
cn/data/: index.html
cn/equipment/: index.html
cn/establishment/: index.html
cn/search/: search_index.json
cn/summary/: index.html
config/cn/: mkdocs.yml
config/de/: mkdocs.yml
config/en/: mkdocs.yml
config/es/: mkdocs.yml
config/fr/: mkdocs.yml
config/pt/: mkdocs.yml
data/: index.html
data/announcements/: index.html
data/filename/: index.html
data/metadata/: index.html
data/quality/: index.html
data/recording/: index.html
de/: 404.html  index.html  sitemap.xml
de/data/: index.html
de/equipment/: index.html
de/establishment/: index.html
de/search/: search_index.json
de/summary/: index.html
docs/cn/: index.md  summary.md
docs/de/: index.md  summary.md  testing.md
docs/en/: index.md  summary.md
docs/es/: index.md  summary.md
docs/fr/: index.md  summary.md
docs/pt/: index.md  summary.md
en/: 404.html  index.html  sitemap.xml
en/data/: index.html
en/equipment/: index.html
en/establishment/: index.html
en/search/: search_index.json
en/summary/: index.html
equipment/: index.html
equipment/antenna/: index.html
equipment/cable/: index.html
equipment/meteo_sensors/: index.html
equipment/receiver/: index.html
es/: 404.html  index.html  sitemap.xml
es/data/: index.html
es/summary/: index.html
establishment/: index.html
fr/: 404.html  index.html  sitemap.xml
pt/: 404.html  index.html  sitemap.xml
summary/: index.html
(+215 files in other folders)
