[tool]
[tool.poetry]
name = "igs-cors-guidelines"
version = "1.0.0"
homepage = "https://git.gfz-potsdam.de/gnss/igs-cors-guidelines"
description = "IGS CORS Guidelines"
authors = ["Markus Bradke <markus.bradke@gfz-potsdam.de>"]
readme = "README.md"
license = "EUPL-1.2"
classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: EUPL Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "igs-cors-guidelines" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
pip = "^23.0.1"
mkdocs = "^1.4.2"
mkdocs-include-markdown-plugin = "^4.0.4"
mkdocs-material = "^9.1.3"
mkdocstrings = "^0.20.0"
mkdocs-material-extensions = "^1.1.1"
mkdocs-autorefs = "^0.4.1"
bump2version = "^1.0.1"
pre-commit = "^3.2.0"
mkdocs-open-in-new-tab = "^1.0.2"
mkdocs-git-revision-date-localized-plugin = "^1.2.5"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
